реализация логики в PaymentController, тесты payments, интеграция shop с payments через клиент, доработка тестов shop
